2011-08-16  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	bin/pandora_server: Improved Enterprise check to the policy queue
	thread and fix a memory problem in the queue patrol loop

2011-08-16  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: When reading module tags use
	  get_tag_value to avoid trouble with empty tags.

2011-08-13  Sancho Lerena <slerena@artica.es>

    * lib/Core.pm: get_agent_from_addr() function is now in Core because
    is used in trap alert functions. Implemented in pandora_execute_action() 
    the internal command "Generate event" was missing. Also altered the way a 
    complex trap is matched, now search for Value, Custom Value and Custom OID.
    If an action containing a "event" command is the target, skip the creation
    of a event to inform of SNMP alert firing.

    * lib/ReconServer.pm: get_agent_from_addr() moved to Core.pm  

2011-08-12  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Fixed a couple of typos.

2011-08-12  Sergio Martin <sergio.martin@artica.es>

	* bin/pandora_server: Fixed policy queue when the server is launched
	in daemon mode for bug 3390085 

2011-08-12  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Added enterprise configuration tokens to
	  the default conf.

	* lib/PandoraFMS/Config.pm: Changed the default location of the braa
	  binary.

2011-08-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Added support for custom module tags
	  (stored in column extended_info).

2011-08-10  Sancho Lerena <slerena@artica.es>

	* pandora_server.spec, pandora_server.redhat.spec: Added perl-Socket6
	package.

	* Config.pm: Updated version to 4.0RC1

2011-08-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* DEBIAN/control: Fixed a bug with dependences.

2011-08-10 Dario Rodriguez <dario.rodriguez@artica.es>

	* DEBIAN/control: Added libsocket6-perl libio-socket-inet6-perl
	packages to dependence  
