@@ -1,3 +1,7 @@
+2011-08-17  Ramon Novoa  <rnovoa@artica.es>
+
+	* lib/PandoraFMS/NetworkServer.pm: Convert text obj tags to OIDs.
+
 2011-08-16  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/Core.pm
